lib/src/jme_bindings.dart


  int jme_houses_armc_ex2(
    double armc,
    double geo_lat,
    double eps,
    int house_system,
    ffi.Pointer<ffi.Double> cusps,
    ffi.Pointer<ffi.Double> ascmc,
    ffi.Pointer<ffi.Double> cusps_speed,
    ffi.Pointer<ffi.Double> ascmc_speed,
  ) {
    return _jme_houses_armc_ex2(
      armc,
      geo_lat,
      eps,
      house_system,
      cusps,
      ascmc,
      cusps_speed,
      ascmc_speed,
    );
  }

  late final _jme_houses_armc_ex2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>)>>('jme_houses_armc_ex2');
  late final _jme_houses_armc_ex2 = _jme_houses_armc_ex2Ptr.asFunction<
      int Function(
          double,
          double,
          double,
          int,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>)>();

  int jme_houses_ex(
    double jd_ut,
    int flags,
    double geo_lat,
    double geo_lon,
    int house_system,
    ffi.Pointer<ffi.Double> cusps,
    ffi.Pointer<ffi.Double> ascmc,
  ) {
    return _jme_houses_ex(
      jd_ut,
      flags,
      geo_lat,
      geo_lon,
      house_system,
      cusps,
      ascmc,
    );
  }

  late final _jme_houses_exPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>)>>('jme_houses_ex');
  late final _jme_houses_ex = _jme_houses_exPtr.asFunction<
      int Function(double, int, double, double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>)>();

  int jme_houses_ex2(
    double jd_ut,
    int flags,
    double geo_lat,
    double geo_lon,
    int house_system,
    ffi.Pointer<ffi.Double> cusps,
    ffi.Pointer<ffi.Double> ascmc,
    ffi.Pointer<ffi.Double> cusps_speed,
    ffi.Pointer<ffi.Double> ascmc_speed,
  ) {
    return _jme_houses_ex2(
      jd_ut,
      flags,
      geo_lat,
      geo_lon,
      house_system,
      cusps,
      ascmc,
      cusps_speed,
      ascmc_speed,
    );
  }

  late final _jme_houses_ex2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>)>>('jme_houses_ex2');
  late final _jme_houses_ex2 = _jme_houses_ex2Ptr.asFunction<
      int Function(
          double,
          int,
          double,
          double,
          int,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>)>();

  double jme_jd_add_seconds(
    double jd,
    double seconds,
  ) {
    return _jme_jd_add_seconds(
      jd,
      seconds,
    );
  }

  late final _jme_jd_add_secondsPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double, ffi.Double)>>(
          'jme_jd_add_seconds');
  late final _jme_jd_add_seconds =
      _jme_jd_add_secondsPtr.asFunction<double Function(double, double)>();

  double jme_jd_difference_seconds(
    double jd_end,
    double jd_start,
  ) {
    return _jme_jd_difference_seconds(
      jd_end,
      jd_start,
    );
  }

  late final _jme_jd_difference_secondsPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double, ffi.Double)>>(
          'jme_jd_difference_seconds');
  late final _jme_jd_difference_seconds = _jme_jd_difference_secondsPtr
      .asFunction<double Function(double, double)>();

  void jme_jd_to_utc(
    double jd,
    int calendar,
    ffi.Pointer<ffi.Int> year,
    ffi.Pointer<ffi.Int> month,
    ffi.Pointer<ffi.Int> day,
    ffi.Pointer<ffi.Int> hour,
    ffi.Pointer<ffi.Int> minute,
    ffi.Pointer<ffi.Double> second,
  ) {
    return _jme_jd_to_utc(
      jd,
      calendar,
      year,
      month,
      day,
      hour,
      minute,
      second,
    );
  }

  late final _jme_jd_to_utcPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Double,
              ffi.Int,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Double>)>>('jme_jd_to_utc');
  late final _jme_jd_to_utc = _jme_jd_to_utcPtr.asFunction<
      void Function(
          double,
          int,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Double>)>();

  int jme_jpl_body_state(
    double jd_time,
    int target_body,
    int center_body,
    int unit,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_body_state(
      jd_time,
      target_body,
      center_body,
      unit,
      state,
      error,
    );
  }

  late final _jme_jpl_body_statePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_body_state');
  late final _jme_jpl_body_state = _jme_jpl_body_statePtr.asFunction<
      int Function(double, int, int, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Char>)>();

  int jme_jpl_body_state_naif(
    double jd_time,
    int target_naif,
    int center_naif,
    int unit,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_body_state_naif(
      jd_time,
      target_naif,
      center_naif,
      unit,
      state,
      error,
    );
  }

  late final _jme_jpl_body_state_naifPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_body_state_naif');
  late final _jme_jpl_body_state_naif = _jme_jpl_body_state_naifPtr.asFunction<
      int Function(double, int, int, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Char>)>();

  int jme_jpl_body_state_native(
    double jd_time,
    int target_body,
    int center_body,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_body_state_native(
      jd_time,
      target_body,
      center_body,
      state,
      error,
    );
  }

  late final _jme_jpl_body_state_nativePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_body_state_native');
  late final _jme_jpl_body_state_native =
      _jme_jpl_body_state_nativePtr.asFunction<
          int Function(double, int, int, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>();

  int jme_jpl_body_state_native_naif(
    double jd_time,
    int target_naif,
    int center_naif,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_body_state_native_naif(
      jd_time,
      target_naif,
      center_naif,
      state,
      error,
    );
  }

  late final _jme_jpl_body_state_native_naifPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_body_state_native_naif');
  late final _jme_jpl_body_state_native_naif =
      _jme_jpl_body_state_native_naifPtr.asFunction<
          int Function(double, int, int, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>();

  int jme_jpl_body_state_native_split(
    double jd0,
    double time_offset,
    int target_body,
    int center_body,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_body_state_native_split(
      jd0,
      time_offset,
      target_body,
      center_body,
      state,
      error,
    );
  }

  late final _jme_jpl_body_state_native_splitPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_body_state_native_split');
  late final _jme_jpl_body_state_native_split =
      _jme_jpl_body_state_native_splitPtr.asFunction<
          int Function(double, double, int, int, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>();

  int jme_jpl_body_state_native_split_naif(
    double jd0,
    double time_offset,
    int target_naif,
    int center_naif,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_body_state_native_split_naif(
      jd0,
      time_offset,
      target_naif,
      center_naif,
      state,
      error,
    );
  }

  late final _jme_jpl_body_state_native_split_naifPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_body_state_native_split_naif');
  late final _jme_jpl_body_state_native_split_naif =
      _jme_jpl_body_state_native_split_naifPtr.asFunction<
          int Function(double, double, int, int, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>();

  int jme_jpl_body_state_order(
    double jd0,
    double time_offset,
    int target_body,
    int center_body,
    int unit,
    int order,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_body_state_order(
      jd0,
      time_offset,
      target_body,
      center_body,
      unit,
      order,
      state,
      error,
    );
  }

  late final _jme_jpl_body_state_orderPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_body_state_order');
  late final _jme_jpl_body_state_order =
      _jme_jpl_body_state_orderPtr.asFunction<
          int Function(double, double, int, int, int, int,
              ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>();

  int jme_jpl_body_state_order_naif(
    double jd0,
    double time_offset,
    int target_naif,
    int center_naif,
    int unit,
    int order,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_body_state_order_naif(
      jd0,
      time_offset,
      target_naif,
      center_naif,
      unit,
      order,
      state,
      error,
    );
  }
